vest-dsl/test/bad/choice_ints_type_mismatch.vest
fmt(@tag: [u8; 10]) = choose(@tag) {
  1 => u8,
  2 => u16,
  3 => u32,
}
